Add overlay to images + rename data view
- Renamed data view from top to dataDisplay since it also shows recommendations
- Added the artist/track name to each image as an overlay

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,12 +12,21 @@ body {
     border: none !important; 
 }
 
-.itemName {
+.overlay {
     opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.itemName:hover {
+.overlay:hover {
     opacity: 1;
+}
+
+.itemName {
+    color: white;
+    text-align: center;
+    font-size: 30px;
 }
 
 .nav-link, .navbar-brand {
