--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,6 +35,16 @@ body {
     color: white !important;
 }
 
+.adjusting-align {
+    justify-content: flex-end !important;
+}
+
+@media (max-width: 576px) {
+    .adjusting-align {
+        justify-content: center !important;
+    }
+}
+
 .itemName {
     color: rgba(0, 0, 0, 0);
     text-align: center;
