--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,7 +105,11 @@ html, body {
 .playlistHeader {
     text-align: center;
     color: white;
-    font-size: 30px;
+    font-size: 35px;
+}
+
+.playlistTitle {
+    font-size: 25px;
 }
 
 .playlistForm {
@@ -293,7 +297,7 @@ html, body {
     height: 150px; 
     min-width: 320px; 
     max-width:320px;
-    border: 3px solid !important;
+    border: 2px solid !important;
     border-color: #6f42c1 !important;
     background-color: #121212;
     color: white;
@@ -303,13 +307,20 @@ html, body {
 }
 
 .playlistCardDeck {
-    margin-left: 100px !important;
-    margin-right: 100px !important;
+    margin-left: 150px !important;
+    margin-right: 150px !important;
+}
+
+@media (max-width: 1606px) {
+    .playlistCardDeck {
+        margin-left: 100px !important;
+        margin-right: 100px !important;
+    }
 }
 
 @media (max-width: 1506px) {
     .cardPlaylist {
-        height: 150px; 
+        height: 160px; 
         width: 320px; 
         margin-right: 30px !important;
         margin-left: 30px !important;
@@ -318,7 +329,7 @@ html, body {
 
 @media (max-width: 1386px) {
     .cardPlaylist {
-        height: 150px; 
+        height: 170px; 
         width: 320px; 
         margin-right: 15px !important;
         margin-left: 15px !important;
@@ -335,19 +346,75 @@ html, body {
 @media (max-width: 1136px) {
     .cardPlaylist {
         min-width: 290px !important;
-        height: 150px; 
+        height: 180px; 
         width: 300px; 
+    }
+}
+
+@media (max-width: 700px) {
+    .cardPlaylist {
+        height: 200px; 
     }
 }
 
 .cardSvg {
     height: 200px; 
-    width: 450px !important; 
-    border: 3px solid !important;
-    border-color: #6f42c1 !important;
+    min-width: 500px !important; 
     background-color: #121212;
     color: white;
     text-align: center;
-    margin-right: 10px !important;
-    margin-left: 10px !important;
+    margin-right: 30px !important;
+    margin-left: 30px !important;
+}
+
+.deckSvg {
+    margin-right: 300px !important;
+    margin-left: 300px !important;
+}
+
+@media (max-width: 1766px) {
+    .deckSvg {
+        margin-right: 200px !important;
+        margin-left: 200px !important;
+    }
+}
+
+@media (max-width: 1566px) {
+    .deckSvg {
+        margin-right: 100px !important;
+        margin-left: 100px !important;
+    }
+}
+
+@media (max-width: 1367px) {
+    .deckSvg {
+        margin-right: 30px !important;
+        margin-left: 30px !important;
+    }
+}
+
+svg {
+    border: 2px solid !important;
+    border-color: #6f42c1 !important;
+}
+
+rect {
+    fill: #6f42c1;
+}
+
+.playlistFooter {
+    min-height: 86% !important;
+}
+
+.leftA {
+    float: left;
+}
+
+.rightA {
+    float: right;
+}
+
+.alignDist {
+    width: 400px;
+    margin: 0 auto;
 }
