--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -298,7 +298,8 @@ html, body {
 }
 
 .cardPlaylist {
-    height: 150px; 
+    min-height: 150px;
+    max-height: 190px;
     min-width: 320px; 
     max-width:320px;
     border: 2px solid !important;
@@ -324,7 +325,8 @@ html, body {
 
 @media (max-width: 1506px) {
     .cardPlaylist {
-        height: 160px; 
+        min-height: 150px;
+        max-height: 190px;
         width: 320px; 
         margin-right: 30px !important;
         margin-left: 30px !important;
@@ -333,7 +335,8 @@ html, body {
 
 @media (max-width: 1386px) {
     .cardPlaylist {
-        height: 170px; 
+        min-height: 150px;
+        max-height: 190px;
         width: 320px; 
         margin-right: 15px !important;
         margin-left: 15px !important;
@@ -350,7 +353,8 @@ html, body {
 @media (max-width: 1136px) {
     .cardPlaylist {
         min-width: 290px !important;
-        height: 180px; 
+        min-height: 150px;
+        max-height: 190px;
         width: 300px; 
     }
 }
