Update index images + readme images

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -429,6 +429,10 @@ rect {
     min-height: 86% !important;
 }
 
+.homeFooter {
+    min-height: 89% !important;
+}
+
 .leftA {
     float: left;
 }
