Add blade layouts to support current song feature
- Now a new page that allows you to see recommendations based upon your current track you are listening to

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -170,6 +170,16 @@ html, body {
     max-width: 320px ;
 }
 
+.currentImage {
+    max-height: 120px ;
+    max-width: 120px ;
+}
+
+.currentTrackDetails {
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
 
 .extend {
     width: 100% !important;
